Pls check the files
Everything works as advertized

--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<!--Your HTML code here-->
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
+</head>
+<body>
+<p id="onlypara">"current demo only works for CSU East Bay"</p>
+<a id="footnote" href="About_Us.html" style="text-decoration:none">   About Us   </a>
+<h2 id="college" >College Finder</h2>
+
+
+ 
+
+
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+
+<ul id="myUL">
+  <li><a href="collegepage.html">California State University - East Bay</a></li>
+  <li><a href="#">Arizona State University </a></li>
+
+  <li><a href="#">University of California at Los Angeles</a></li>
+  <li><a href="#">Florida State University</a></li>
+  <li><a href="#">Southern Methodist University</a></li>
+</ul>
+
+<footer>
+  <p>College Finder is a website intended to help students find their dream college.</p>
+  <p>All Rights Reserved by CollegeFinder.com</p>
+  <br />
+  <a id="footnote1" href="About_Us.html" style="text-decoration:none">   About Us   </a>
+
+</footer>
+
+  <script src="./js/main.js"></script>
+
+</body>
+</html>
