--- a/About_Us.html
+++ b/About_Us.html
@@ -17,6 +17,7 @@
 <hr>
 
 <h3>PORTFOLIO</h3>
+<!--This is a comment. Comments are not displayed in the browser-->
 
 <!-- Portfolio Gallery Grid -->
 <div class="row">
