index html page.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p id="onlypara">"current demo only works for CSU East Bay"</p>
 <a id="footnote" href="About_Us.html" style="text-decoration:none">   About Us   </a>
 <h2 id="college" >College Finder</h2>
-
+<!--This is a comment. Comments are not displayed in the browser-->
 
  
 
