--- a/About_Us.html
+++ b/About_Us.html
@@ -1,66 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
-<body>
+<body >
 
 <h2 id="college" href="index.html" >College Finder</h2>
-<div class="topnav">
-  <a id="footnote" href="index.html">Home</a>
-</div>
+  <a id="footnote" href="index.html" style="text-decoration:none" >Home</a>
 
-<h1>ABOUT US</h1>
-<p>We provide details of universities, their Acceptance rate, Average SAT Score and their Address. These information will help student or person to decide better which university to choose and compare parameters of universities.</p>
-<p>We help people to shortlist universities.</p>
-<hr>
+<h2 >ABOUT US</h2>
+<p >We provide details of universities, their Acceptance rate, Average SAT Score and their Address. These information will help student or person to decide better which university to choose and compare parameters of universities.</p>
+<p >We help people to shortlist universities.</p>
 
-<h3>PORTFOLIO</h3>
+
+<h3 id="heading">PORTFOLIO</h3>
 <!--This is a comment. Comments are not displayed in the browser-->
 
 <!-- Portfolio Gallery Grid -->
-<div class="row">
-  <div class="column">
-    <div class="content">
-      <img src="img\sudeep.jpeg" alt="Mountains" style="width:25%">
+<div class="row" overflow-x=" hidden"  >
+  <div class="column" overflow-x=" hidden" >
+    <div class="content1" overflow-x=" hidden" >
+      <img src="img\sudeep.jpeg" alt="Sudeep" style="width:15%">
       <h3>Sudeep Lunawat</h3>
       <p>Worked on database aquisition.</p>
-      <a href="https://github.com/formyownsake/DIS">Git</a>
     </div>
   </div>
   <div class="column">
-    <div class="content">
-    <img src="img\mrudhula.jpeg" alt="Mrudhula Murali" style="width:25%">
+    <div class="content1">
+    <img src="img\mrudhula.jpeg" alt="Mrudhula Murali" style="width:15%">
       <h3>Mrudhula Murali</h3>
       <p>Worked on layouts in website and search page</p>
-      <a href="https://github.com/mrudhulamurali">Git</a>
     </div>
   </div>
   <div class="column">
-    <div class="content">
-    <img src="img\vibhu.jpeg" alt="Nature" style="width:25%">
+    <div class="content1">
+    <img src="img\vibhu.jpeg" alt="Vibhu" style="width:15%">
       <h3>Vibhu Kumar</h3>
       <p>Worked on enhancing layout and Creating About Us page</p>
-      <a href="https://github.com/VibhuKumar">Git</a>
     </div>
   </div>
+ </div>
  
 <!-- END GRID -->
+<h3>GitHub Repository Link: </h3>
+<div class="database" >
+<a href="https://github.com/mrudhulamurali">Assignment_LookAndFeel</a>
+</div>
 
-<h3>Database model driving the website</h3>
-<div class="content">
-  <img src="img/data_model.png" alt="mod" style="width:50% height:50%">
+<h3  >Database model driving the website</h3>
+
+<div class="database" >
+  <img src="img/data_model.png" alt="mod" style="width:50% height:50%" >
 
 <!-- END MAIN -->
 </div>
-<h1>                                     </h1>
-<h2>                                     </h2>
-
-<footer>
+<h1></h1>
+<footer >
   <p>College Finder is a website intended to help students find their dream college.</p>
   <p>All Rights Reserved by CollegeFinder.com</p>
 </footer>
 
+  <script src="./js/main.js"></script>
+  
 </body>
 </html>
