--- a/collegepage.html
+++ b/collegepage.html
@@ -8,8 +8,9 @@
 
 <h2 id="college" href="index.html" style="text-decoration:none">College Finder</h2>
 
-<a id="footnote" href="index.html" style="text-decoration:none">Home</a>
-<h3 style="color:white">       jHHH      </h3>
+ <a id="footnote" href="About_Us.html" style="text-decoration:none"> About Us </a>
+<a id="footnote" href="index.html" style="text-decoration:none" margin-left:2px>Home </a>
+
 
 <table class="GeneratedTable">
   <thead>
@@ -37,15 +38,13 @@
       <td>Accredition  :  UPA</td>
     </tr>
     <tr>
-      <td>Institute URL : <a id="htt" href = "https://www.csueastbay.edu" >https://www.csueastbay.edu</a></td>
+      <td>Institute URL : <a id="htt" href = "https://www.csueastbay.edu" >CSU East Bay</a></td>
     </tr>
   </tbody>
 </table>
 
 <footer>
   <p>College Finder is a website intended to help students find their dream college.</p>
-  <p>All Rights Reserved by CollegeFinder.com</p>
-  <a id="footnote1" href="About_Us.html" style="text-decoration:none">   About Us   </a>
 
 </footer>
 
